--- a/info.yaml
+++ b/info.yaml
@@ -1,9 +1,9 @@
 # Tiny Tapeout project information
-project: Transmisor UART
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+project: 
+  title:        "Transmisor UART"      # Project title
+  author:       "Vitalino Guerra y Gianluigi Salinas"      # Your name
+  discord:      "Vita224"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "Transmisor UART"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
