--- a/info.yaml
+++ b/info.yaml
@@ -14,7 +14,8 @@ project:
   top_module:  "tt_um_Vita224_top"
   
   # List your project's source files here. Source files must be in ./src and you must list each source file separately, one per line:
-  source_files:        
+  source_files:   
+    - "tt_um_Vita224_top.v"
     - "transmit_debouncing.v"
     - "transmitter.v"
     
